--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 * {
   --primary-color:blue;
   --secondary-color:orange;
   --text-color: rgb(30, 30, 59);
   --text-dark:black;
   --background-color:#fff;
-  --large-text:1.7rem;
-  --medium-text:1.2rem;
+  --large-text:1.6rem;
+  --medium-text:1.1rem;
   --normal-text:1rem;
   --small-text:0.9rem;
   --xsmall-text:0.8rem;
@@ -15,6 +16,7 @@
 }
 
 :root {
+  font-family: "Poppins", sans-serif;
   line-height: 1.68;
   padding: 0;
   margin: 0;
