--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@ nav{
     display: flex;
     position: relative;
     width: 100%;
-    height: 10%;
+    height: 10vh;
     place-items: center;
     font-size: var(--medium-text);
 }
@@ -16,6 +16,11 @@ nav{
     position: relative;
     width: 20%;
     font-size: var(--large-text);
+}
+
+.icon strong {
+    font-size: xx-large;
+    letter-spacing: 2px;
 }
 
 .nav-content {
