--- a/src/pages/careers/careers.css
+++ b/src/pages/careers/careers.css
@@ -1,7 +1,11 @@
 .careers {
     padding: 1rem;
     position: relative;
-    /* height: 80vh; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 90vh;
+    justify-content: center;
 }
 
 .careers h1{
@@ -13,15 +17,18 @@
 
 .open-positions {
     position: relative;
+    justify-content: space-evenly;
     display: grid;
     grid-template-columns: repeat(3, 30%);
 }
 
 .open-positions .position {
-    padding: 1rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px 0px #d8d7d7;
 }
 
 .open-positions div .title {
@@ -31,7 +38,7 @@
 .careers-action {
     display: flex;
     flex-direction: row;
-    gap: 4px;
+    gap: 2rem;
 }
 
 .careers-action button {
@@ -40,4 +47,13 @@
     background-color: #fff;
     border: 1px solid gray;
     width: fit-content;
+}
+
+.careers-action .closed {
+    color: red;
+    cursor: default;
+}
+
+.careers-action .open {
+    color: green;
 }
