--- a/src/pages/faq/faq.css
+++ b/src/pages/faq/faq.css
@@ -1,4 +1,5 @@
 .faq {
+    flex: none;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -6,6 +7,7 @@
     align-items: center;
     justify-content: center;
     gap: 4px;
+    scroll-snap-align: start;
 }
 
 .faq h1 {
