--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,11 +1,13 @@
 .products {
+    flex: none;
     position: relative;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 4px;
+    scroll-snap-align: start;
 }
 
 .products h1 {
