--- a/src/pages/statement/statement.css
+++ b/src/pages/statement/statement.css
@@ -1,4 +1,5 @@
 .statement {
+    flex: none;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -6,6 +7,9 @@
     text-align: center;
     position: relative;
     height: 100vh;
+    scroll-snap-align: start;
+    scroll-behavior: smooth;
+    gap: 2rem;
 }
 
 .statement div {
