--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 :root {
-  font-family: "Poppins", sans-serif;
+  font-family: "", sans-serif;
   line-height: 1.68;
   padding: 0;
   margin: 0;
