--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,8 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    background-color: rgb(207, 207, 236);
+    background-color: rgb(68, 68, 99);
+    color: #fff;
 }
 .footer-content {
     display: grid;
@@ -26,7 +27,8 @@
 .bottom {
     display: flex;
     justify-content: center;    
-    background-color: rgb(174, 174, 214);
+    background-color:rgb(50, 50, 82);
+    color: #fff;
     gap: 2rem;
     padding: 0.3rem;
 }
