--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,7 +4,6 @@ nav{
     width: 100%;
     height: 10vh;
     place-items: center;
-    font-size: var(--medium-text);
 }
 
 .icon {
@@ -19,8 +18,9 @@ nav{
 }
 
 .icon strong {
-    font-size: xx-large;
+    font-size: var(--xlarge-text);
     letter-spacing: 2px;
+    font-weight: 400;
 }
 
 .nav-content {
@@ -48,10 +48,21 @@ nav{
 }
 
 .nav-elements li:hover {    
-    color: blue;
-    transition: 0.3s;
+    color: var(--primary-color);
+    transition: 0.5s;
 }
 
+.contact-list {
+    display: none;
+}
+
+.contacts:hover .contact-list {
+    /* display: block; */
+    position: absolute; 
+    z-index: 1;
+    top: 0;
+    right: 0;
+} 
 
 .call-actions {
     position: relative;
@@ -62,7 +73,7 @@ nav{
 }
 
 .call-actions button {
-    border: none;
+    cursor: pointer;
     width: 5rem;
     padding: 0.8rem var(--standard-dimension);
     background-color: var(--background-color);
@@ -70,11 +81,12 @@ nav{
     color: var(--text-color);
     font-size: var(--normal-text);
     font-weight: bold;
-    border: solid 1px gray;
+    border: solid 1px var(--primary-color);
+    color: var(--primary-color);
 }
 
 .call-actions button:nth-child(1) {
-    background-color: blue;
+    background-color: var(--primary-color);
     color: white;  
-    border: none; 
+    border: none !important; 
 }
