--- a/src/pages/careers/careers.css
+++ b/src/pages/careers/careers.css
@@ -46,11 +46,13 @@
     padding: 0.5rem 0.8rem;
     background-color: #fff;
     border: 1px solid gray;
+    border-radius: 4px;
     width: fit-content;
+    color: var(--text-color);
 }
 
 .careers-action .closed {
-    color: red;
+    color: var(--secondary-color);
     cursor: default;
 }
 
