--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,9 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90%;
+    height: 100%;
     gap: 1.5rem;    
-    /* place-content: center; */
+    /* background-image: url('https://images.unsplash.com/photo-1610278764397-388d11c35ddb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRhcCUyMHdhdGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60'); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* color: #fff; */
 }
 
 .headline, .description {
@@ -19,7 +22,7 @@
 }
 
 .headline h1 {
-    font-size: 2.5rem;
+    font-size: var(--xlarge-text);
     line-height: 1.2;
     margin: 0;
 }
@@ -37,16 +40,15 @@
     width: 15rem;
     justify-content: space-around;
     border-radius: 2rem;
-    border: solid 1px gray;
-    background-color: var(--background-color);
-    /* background-color: white; */
+    border: solid 1px var(--secondary-color);
+    background-color: var(--secondary-color);
     cursor: pointer;
-    color: var(--text-color);
+    color: #fff;
 }
 
 .home .call-action button:hover {
     transition: 0.3s;
-    background-color: blue;
-    color: white;
-    border: none;
+    background-color: #fff;
+    color: var(--secondary-color);
+
 }
