--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,9 +1,87 @@
-.main-page {    
-    flex: none;
+.home {
+    /* position: inherit;   */
     display: flex;
     flex-direction: column;
-    position: inherit;
-    height: 90vh;
-    width: 100%;
-    scroll-snap-align: start;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    gap: 1.5rem;   
+    /* background-image: url('https://images.unsplash.com/photo-1610278764397-388d11c35ddb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRhcCUyMHdhdGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60'); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* color: #fff; */
+}
+
+.headline, .description {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;    
+    width: 70%;
+}
+
+.description {
+    width: 55%;    
+}
+
+.headline h1 {
+    font-size: var(--xlarge-text);
+    line-height: 1.2;
+    margin: 0;
+}
+
+.home .call-action {
+    display: flex;
+    gap: 2rem;
+}
+
+.home .call-action button {
+    font-size: var(--normal-text);
+    display: flex;    
+    place-items: center;
+    padding: 0.5rem 0.8rem;
+    width: 15rem;
+    justify-content: space-around;
+    border-radius: 2rem;
+    border: solid 1px var(--secondary-color);
+    /* background-color: var(--secondary-color); */
+    color: var(--secondary-color);
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.home .call-action button:hover {
+    transition: 0.3s;
+    background-color: #fff;
+    color: var(--secondary-color);
+
+}
+
+/* Medium Size */
+@media screen and ( max-width: 992px) {
+    .headline, .description {
+        width: 90%;   
+    } 
+    
+    .home .call-action button {
+        width: 15rem;
+        font-size: var(--xsmall-text);
+    }
+}
+
+/* Tablet Size */
+@media screen and ( max-width: 768px) {
+    .headline, .description {
+        width: 90%;   
+    }
+
+    .home .call-action button {
+        width: 10rem;
+        font-size: var(--xsmall-text);
+    }
+}
+
+/* Small Size */
+@media screen and ( max-width: 576px) {
+    
 }
