--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,13 +1,10 @@
 .products {
-    flex: none;
     position: relative;
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 4px;
-    scroll-snap-align: start;
 }
 
 .products h1 {
@@ -17,7 +14,7 @@
 
 .products-content {
     display: grid;
-    grid-template-columns: repeat(3, 20rem);
+    grid-template-columns: repeat(3, 25%);
     align-items: center;
     justify-content: center;
     gap: 2rem;
@@ -74,4 +71,26 @@
 .view-more:hover {
     background-color: #f35e19;
     color: #fff;
+}
+
+
+/* Medium Size */
+@media screen and ( max-width: 992px) {
+    .products-content {
+        grid-template-columns: repeat(2, 35%);               
+    }
+}
+
+/* Tablet Size */
+@media screen and ( max-width: 768px) {
+    .products-content {
+        grid-template-columns: repeat(2, 40%);               
+    }
+}
+
+/* Small Size */
+@media screen and ( max-width: 576px) {
+    .products-content {
+        grid-template-columns: repeat(2, 45%);               
+    }
 }
