--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -27,7 +27,7 @@
 .headline h1 {
     font-size: var(--xlarge-text);
     line-height: 1.2;
-    margin: 0;
+    font-weight: bolder;
 }
 
 .home .call-action {
