--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,24 @@
 .items {
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
-    overflow: auto;
-    display: flex;
-    gap: 3rem;
-    flex-direction: column;
+    /* padding: 0 2rem; */
+}
+
+/* Medium Size */
+@media screen and ( max-width: 992px) {
+    /* .items {
+        padding: 0 0.8rem;
+    }     */
+}
+
+/* Tablet Size */
+@media screen and ( max-width: 768px) {
+    /* .items {
+        padding: 0 0.5rem;
+    }     */
+}
+
+/* Small Size */
+@media screen and ( max-width: 576px) {
+    .items div{
+        /* padding: 0 9px; */
+    }    
 }
