--- a/src/components/about/statement/statement.css
+++ b/src/components/about/statement/statement.css
@@ -4,16 +4,36 @@
     gap: 1rem;   
 }
 .statement-top {
+    width: 100%;
     display: flex;
     padding: 2rem 0;
     justify-content: space-between;
     background-color: #f7f7f7;
 }
 
+.statement-heading {
+    position: relative;
+    display: flex;
+    place-items: center;
+    line-height: 1.3;
+    gap: 1rem;
+    width: 50%;
+}
+
+.statement-heading h1 {
+    font-weight: bold;
+}
+
+.statement-content {
+    position: relative;
+    width: 30%;
+}
+
 .statement-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
+    line-height: 1.2;
 }
 
 .statement-bottom div h1 {
@@ -44,6 +64,8 @@
    place-items: center;
    gap: 8px;
    cursor: pointer;
+   background-color: #fff;
+   border: solid 1px gray;
 }
 
 .majiup-image  {
@@ -59,20 +81,50 @@
     object-fit: cover;
 }
 
-.statement-heading {
-    position: relative;
-    display: flex;
-    place-items: center;
-    line-height: 1.3;
-    gap: 1rem;
-    width: 50%;
+
+/* Medium Size */
+@media screen and ( max-width: 992px) {
+     
 }
 
-.statement-heading h1 {
-    font-weight: bold;
+/* Tablet Size */
+@media screen and ( max-width: 768px) {
+
 }
 
-.statement-content {
-    position: relative;
-    width: 30%;
+/* Small Size */
+@media screen and ( max-width: 576px) {
+    .statement-top {
+        flex-direction: column;
+        width: 100%;
+    }  
+
+    .statement-heading {       
+        width: 100%;
+        display: block;
+    }
+    
+    .statement-heading h1 {
+        text-align: start;
+    }
+    
+    .statement-content {
+        position: relative;
+        width: 80%;
+    }
+
+    .statement-bottom {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .statement-bottom div {
+        width: 100%;
+    }
+
+    .majiup-image img{
+        width: 100%;
+    }
+
 }
