--- a/src/pages/careers/careers.css
+++ b/src/pages/careers/careers.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 90vh;
+    /* height: 90vh; */
     justify-content: center;
 }
 
@@ -58,4 +58,30 @@
 
 .careers-action .open {
     color: green;
+}
+
+/* Medium Size */
+@media screen and ( max-width: 992px) {
+    .open-positions {        
+        grid-template-columns: repeat(3, 32%);
+    }
+}
+
+/* Tablet Size */
+@media screen and ( max-width: 768px) {
+    .open-positions {        
+        grid-template-columns: repeat(2, 45%);
+    }
+}
+
+/* Small Size */
+@media screen and ( max-width: 576px) {
+    .open-positions {        
+        grid-template-columns: repeat(1, 95%);
+        gap: 8px;
+    }
+
+    .apply-help {
+        padding: 0 !important;
+    }
 }
