--- a/src/components/about/statement/statement.css
+++ b/src/components/about/statement/statement.css
@@ -1,14 +1,16 @@
 .statements {
     display: flex;
     flex-direction: column;
-    gap: 1rem;   
+    gap: 1rem; 
 }
 .statement-top {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
-    padding: 2rem 0;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+    background-color: aliceblue;
+
     justify-content: space-between;
-    background-color: #f7f7f7;
 }
 
 .statement-heading {
@@ -68,6 +70,13 @@
    border: solid 1px gray;
 }
 
+.statement-bottom div:nth-child(1) button:hover {
+    transition: 0.3s;
+    background-color: #fff;
+    border: solid 1px var(--secondary-color);
+    color: var(--secondary-color);
+}
+
 .majiup-image  {
     display: flex;
     justify-content: center;
@@ -89,14 +98,13 @@
 
 /* Tablet Size */
 @media screen and ( max-width: 768px) {
-
+ 
 }
 
 /* Small Size */
 @media screen and ( max-width: 576px) {
     .statement-top {
         flex-direction: column;
-        width: 100%;
     }  
 
     .statement-heading {       
@@ -115,8 +123,8 @@
 
     .statement-bottom {
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        gap: 1rem;
+        justify-content: start;
     }
 
     .statement-bottom div {
