--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -43,9 +43,9 @@
     width: 15rem;
     justify-content: space-around;
     border-radius: 2rem;
-    border: solid 1px var(--secondary-color);
+    border: solid 1px gray;
     /* background-color: var(--secondary-color); */
-    color: var(--secondary-color);
+    /* color: var(--secondary-color); */
     background-color: #fff;
     cursor: pointer;
 }
@@ -53,6 +53,7 @@
 .home .call-action button:hover {
     transition: 0.3s;
     background-color: #fff;
+    border: solid 1px var(--secondary-color);
     color: var(--secondary-color);
 
 }
