Modified component styling

--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -6,7 +6,7 @@
     align-items: center;
     height: 95vh;
     gap: 1.5rem;   
-    /* background-image: url('https://images.unsplash.com/photo-1610278764397-388d11c35ddb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRhcCUyMHdhdGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60'); */
+    /* background-image: url('https://imgs.search.brave.com/jUOkLezs5whb6H7rCsEW4S-8VvTUy69zrqRIH5arK0M/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/ZW5lcmd5cmV2aWV3/bWVuYS5jb20vbWVk/aWEvazIvaXRlbXMv/Y2FjaGUvYjIwODE4/MjQ1Njg1NWI1Njgw/ZGFkMWJjZDYzMGM2/M2ZfTS5qcGc_dD0y/MDE5MTAwM18wNTM4/Mzg'); */
     background-repeat: no-repeat;
     background-size: cover;
     /* color: #fff; */
