--- a/src/components/about/statement/statement.css
+++ b/src/components/about/statement/statement.css
@@ -1,138 +1,134 @@
 .statements {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem; 
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 5rem;
 }
 .statement-top {
-    /* width: 100%; */
-    display: flex;
-    padding: 2rem 1rem;
-    border-radius: 1rem;
-    background-color: aliceblue;
-
-    justify-content: space-between;
+  /* width: 100%; */
+  display: flex;
+  padding: 2rem 1rem;
+  border-radius: 1rem;
+  background-color: aliceblue;
+  margin-bottom: 5rem;
+  justify-content: space-between;
 }
 
 .statement-heading {
-    position: relative;
-    display: flex;
-    place-items: center;
-    line-height: 1.3;
-    gap: 1rem;
-    width: 50%;
+  position: relative;
+  display: flex;
+  place-items: center;
+  line-height: 1.3;
+  gap: 1rem;
+  width: 50%;
 }
 
 .statement-heading h1 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .statement-content {
-    position: relative;
-    width: 30%;
+  position: relative;
+  width: 30%;
 }
 
 .statement-bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 1.2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.2;
 }
 
 .statement-bottom div h1 {
-    width: 100%;
-    font-weight: bold;
+  width: 100%;
+  font-weight: bold;
 
-    /* text-align: center; */
+  /* text-align: center; */
 }
 
 .statement-bottom div {
-    width: 50%;
-    /* height: 300px; */
-    justify-content: center;
+  width: 50%;
+  /* height: 300px; */
+  justify-content: center;
 }
 
-.statement-bottom div:nth-child(1){
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+.statement-bottom div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.statement-bottom div:nth-child(1) button{
-   width: fit-content;
-   border: none;
-   padding: 0.5rem 0.8rem;
-   border-radius: 2rem;
-   display: flex;
-   place-items: center;
-   gap: 8px;
-   cursor: pointer;
-   background-color: #fff;
-   border: solid 1px gray;
+.statement-bottom div:nth-child(1) button {
+  width: fit-content;
+  border: none;
+  padding: 0.5rem 0.8rem;
+  border-radius: 2rem;
+  display: flex;
+  place-items: center;
+  gap: 8px;
+  cursor: pointer;
+  background-color: #fff;
+  border: solid 1px gray;
 }
 
 .statement-bottom div:nth-child(1) button:hover {
-    transition: 0.3s;
-    background-color: #fff;
-    border: solid 1px var(--secondary-color);
-    color: var(--secondary-color);
+  transition: 0.3s;
+  background-color: #fff;
+  border: solid 1px var(--primary-color);
+  color: var(--primary-color);
 }
 
-.majiup-image  {
-    display: flex;
-    justify-content: center;
-
+.majiup-image {
+  display: flex;
+  justify-content: center;
 }
 
 .majiup-image img {
-    width: 400px;
-    border-radius: 1rem;
-    aspect-ratio: 1;
-    object-fit: cover;
+  width: 400px;
+  border-radius: 1rem;
+  aspect-ratio: 1;
+  object-fit: cover;
 }
 
-
 /* Medium Size */
-@media screen and ( max-width: 992px) {
-     
+@media screen and (max-width: 992px) {
 }
 
 /* Tablet Size */
-@media screen and ( max-width: 768px) {
- 
+@media screen and (max-width: 768px) {
 }
 
 /* Small Size */
-@media screen and ( max-width: 576px) {
-    .statement-top {
-        flex-direction: column;
-    }  
+@media screen and (max-width: 576px) {
+  .statement-top {
+    flex-direction: column;
+  }
 
-    .statement-heading {       
-        width: 100%;
-        display: block;
-    }
-    
-    .statement-heading h1 {
-        text-align: start;
-    }
-    
-    .statement-content {
-        position: relative;
-        width: 80%;
-    }
+  .statement-heading {
+    width: 100%;
+    display: block;
+  }
 
-    .statement-bottom {
-        flex-direction: column;
-        gap: 1rem;
-        justify-content: start;
-    }
+  .statement-heading h1 {
+    text-align: start;
+  }
 
-    .statement-bottom div {
-        width: 100%;
-    }
+  .statement-content {
+    position: relative;
+    width: 80%;
+  }
 
-    .majiup-image img{
-        width: 100%;
-    }
+  .statement-bottom {
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: start;
+  }
 
+  .statement-bottom div {
+    width: 100%;
+  }
+
+  .majiup-image img {
+    width: 100%;
+  }
 }
