--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,96 +1,96 @@
 .products {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-bottom: 5rem;
 }
 
 .products h1 {
-    text-align: center;
-    margin: 0;
+  text-align: center;
+  margin: 0;
 }
 
 .products-content {
-    display: grid;
-    grid-template-columns: repeat(3, 25%);
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 25%);
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .products-content div {
-    display: flex;
-    flex-direction: column;    
-    gap: 20px;
-    line-height: 1.8;
-    padding: 4px;
-    text-align: center;
-    place-items: center;
-    line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  line-height: 1.8;
+  padding: 4px;
+  text-align: center;
+  place-items: center;
+  line-height: 1.5;
 }
 
 .products-content div article {
-    font-size: var(--small-text);
+  font-size: var(--small-text);
 }
 
 .products-content div strong {
-    font-size: var(--normal-text);
-    font-weight: 400;
+  font-size: var(--normal-text);
+  font-weight: 400;
 }
 
-.products-content div button, .view-more {
-    font-size: var(--xsmall-text);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    padding: 0.5rem 0.8rem;
-    /* border: solid 1px var(--secondary-color);  */
-    border: solid 1px gray; 
+.products-content div button,
+.view-more {
+  font-size: var(--xsmall-text);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 0.8rem;
+  /* border: solid 1px var(--secondary-color);  */
+  border: solid 1px gray;
 
-    background-color: var(--background-color);
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: var(--background-color);
+  border-radius: 4px;
+  cursor: pointer;
 
-    /* color: var(--secondary-color); */
+  /* color: var(--secondary-color); */
 }
 
 .products-content div button:hover {
-    transition: 0.5s;
-    border: solid 1px var(--secondary-color);
-    color: var(--secondary-color);
+  transition: 0.5s;
+  border: solid 1px var(--secondary-color);
+  color: var(--secondary-color);
 }
 
 .view-more {
-    width: fit-content;
-
+  width: fit-content;
 }
 
 .view-more:hover {
-    background-color: #f35e19;
-    color: #fff;
+  background-color: #f35e19;
+  color: #fff;
 }
 
-
 /* Medium Size */
-@media screen and ( max-width: 992px) {
-    .products-content {
-        grid-template-columns: repeat(2, 35%);               
-    }
+@media screen and (max-width: 992px) {
+  .products-content {
+    grid-template-columns: repeat(2, 35%);
+  }
 }
 
 /* Tablet Size */
-@media screen and ( max-width: 768px) {
-    .products-content {
-        grid-template-columns: repeat(2, 40%);               
-    }
+@media screen and (max-width: 768px) {
+  .products-content {
+    grid-template-columns: repeat(2, 40%);
+  }
 }
 
 /* Small Size */
-@media screen and ( max-width: 576px) {
-    .products-content {
-        grid-template-columns: repeat(2, 45%);               
-    }
+@media screen and (max-width: 576px) {
+  .products-content {
+    grid-template-columns: repeat(2, 45%);
+  }
 }
