--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,83 +1,82 @@
 .footer {
-    position: relative;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(68, 68, 99);
-    color: #fff;
-    font-size: var(--xsmall-text);
+  box-sizing: border-box;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(68, 68, 99);
+  color: #fff;
+  font-size: var(--xsmall-text);
 }
 
 .footer-content {
-    display: grid;    
-    grid-template-columns: repeat(3, 25%);    
-    height: 200px;
-    gap: 4px;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 25%);
+  height: 200px;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
 }
 
 .footer-content div {
-    position: relative;
-    padding: 0 0.5rem;
-    list-style: none;
-    display: flex;  
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 150px;
+  position: relative;
+  padding: 0 0.5rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 150px;
 }
 
-.bottom {    
-    display: flex;
-    justify-content: center;    
-    background-color:rgb(50, 50, 82);
-    color: #fff;
-    gap: 2rem;
-    padding: 0.3rem;
-    align-items: center;
+.bottom {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(50, 50, 82);
+  color: #fff;
+  gap: 2rem;
+  padding: 0.3rem;
+  align-items: center;
 }
 
 .bottom img {
-    width: 1.5rem;
-    aspect-ratio: 1;
-    object-fit: contain;
+  width: 1.5rem;
+  aspect-ratio: 1;
+  object-fit: contain;
 }
 
 /* Medium Size */
-@media screen and ( max-width: 992px) {
-    .footer-content {
-        grid-template-columns: repeat(3, 30%);    
-        height: 200px;    
-    }    
+@media screen and (max-width: 992px) {
+  .footer-content {
+    grid-template-columns: repeat(3, 30%);
+    height: 200px;
+  }
 }
 
 /* Tablet Size */
-@media screen and ( max-width: 768px) {
-    .footer-content {
-        grid-template-columns: repeat(2, 40%); 
-        height: fit-content;    
-        gap: 4px;    
-    }
+@media screen and (max-width: 768px) {
+  .footer-content {
+    grid-template-columns: repeat(2, 40%);
+    height: fit-content;
+    gap: 4px;
+  }
 
-    .footer-content div {
-        height: 150px;
-    }
-    
+  .footer-content div {
+    height: 150px;
+  }
 }
 
 /* Small Size */
-@media screen and ( max-width: 576px) {
-    .footer-content {
-        grid-template-columns: repeat(2, 50%);                    
-    }
+@media screen and (max-width: 576px) {
+  .footer-content {
+    grid-template-columns: repeat(2, 50%);
+  }
 }
 
 /* XSmall */
 
-@media screen and ( max-width: 576px) {    
-    .bottom {    
-        flex-direction: column;
-        gap: 0.5rem;
-    }
+@media screen and (max-width: 576px) {
+  .bottom {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
