--- a/src/pages/careers/careers.css
+++ b/src/pages/careers/careers.css
@@ -1,88 +1,88 @@
 .careers {
-    padding: 1rem;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    /* height: 90vh; */
-    justify-content: center;
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 90dvh;
+  /* justify-content: center; */
 }
 
-.careers h1{
-    margin: 1rem 0;
-    display: flex;
-    place-items: center;
-    gap: 1rem;
-    font-weight: bold;
+.careers h1 {
+  margin: 1rem 0;
+  display: flex;
+  place-items: center;
+  gap: 1rem;
+  font-weight: bold;
 }
 
 .open-positions {
-    position: relative;
-    justify-content: space-evenly;
-    display: grid;
-    grid-template-columns: repeat(3, 30%);
+  position: relative;
+  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
 }
 
 .open-positions .position {
-    padding: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px 0px #d8d7d7;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px 0px #d8d7d7;
 }
 
 .open-positions div .title {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 
 .careers-action {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
 }
 
 .careers-action button {
-    cursor: pointer;
-    padding: 0.5rem 0.8rem;
-    background-color: #fff;
-    border: 1px solid gray;
-    border-radius: 4px;
-    width: fit-content;
-    color: var(--text-color);
+  cursor: pointer;
+  padding: 0.5rem 0.8rem;
+  background-color: #fff;
+  border: 1px solid gray;
+  border-radius: 4px;
+  width: fit-content;
+  color: var(--text-color);
 }
 
 .careers-action .closed {
-    color: var(--secondary-color);
-    cursor: default;
+  color: var(--secondary-color);
+  cursor: default;
 }
 
 .careers-action .open {
-    color: green;
+  color: green;
 }
 
 /* Medium Size */
-@media screen and ( max-width: 992px) {
-    .open-positions {        
-        grid-template-columns: repeat(3, 32%);
-    }
+@media screen and (max-width: 992px) {
+  .open-positions {
+    grid-template-columns: repeat(3, 32%);
+  }
 }
 
 /* Tablet Size */
-@media screen and ( max-width: 768px) {
-    .open-positions {        
-        grid-template-columns: repeat(2, 45%);
-    }
+@media screen and (max-width: 768px) {
+  .open-positions {
+    grid-template-columns: repeat(2, 45%);
+  }
 }
 
 /* Small Size */
-@media screen and ( max-width: 576px) {
-    .open-positions {        
-        grid-template-columns: repeat(1, 95%);
-        gap: 8px;
-    }
+@media screen and (max-width: 576px) {
+  .open-positions {
+    grid-template-columns: repeat(1, 95%);
+    gap: 8px;
+  }
 
-    .apply-help {
-        padding: 0 !important;
-    }
+  .apply-help {
+    padding: 0 !important;
+  }
 }
