--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -62,6 +62,7 @@
   transition: 0.8s;
   border: solid 1px var(--primary-color);
   color: var(--primary-color);
+  transform: scaleX(1.05);
 }
 
 .request-btn {
@@ -73,6 +74,7 @@
 .request-btn:hover {
   border: none !important;
   color: #fff !important;
+  /* transform: scaleX(1.05); */
 }
 
 .register-v {
