--- a/src/components/mission/mission.css
+++ b/src/components/mission/mission.css
@@ -4,6 +4,8 @@
   gap: 2rem;
   justify-content: center;
   margin-bottom: 5rem;
+  background-color: aliceblue;
+  border-radius: 8px;
 }
 
 .mission div {
