--- a/src/components/about/statement/statement.css
+++ b/src/components/about/statement/statement.css
@@ -3,15 +3,18 @@
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 5rem;
+  align-items: center;
+  width: 100%;
 }
+
 .statement-top {
-  /* width: 100%; */
   display: flex;
   padding: 2rem 1rem;
   border-radius: 1rem;
   background-color: aliceblue;
   margin-bottom: 5rem;
   justify-content: space-between;
+  width: 100%;
 }
 
 .statement-heading {
@@ -29,7 +32,13 @@
 
 .statement-content {
   position: relative;
-  width: 30%;
+  width: 40%;
+}
+
+.main-statement {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .statement-bottom {
@@ -37,6 +46,7 @@
   align-items: center;
   justify-content: center;
   line-height: 1.2;
+  gap: 4rem;
 }
 
 .statement-bottom div h1 {
@@ -46,13 +56,7 @@
   /* text-align: center; */
 }
 
-.statement-bottom div {
-  width: 50%;
-  /* height: 300px; */
-  justify-content: center;
-}
-
-.statement-bottom div:nth-child(1) {
+.statement-bottom .first-box {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -61,21 +65,28 @@
 .statement-bottom div:nth-child(1) button {
   width: fit-content;
   border: none;
-  padding: 0.5rem 0.8rem;
+  padding: 0.8rem 1.3rem;
   border-radius: 2rem;
   display: flex;
   place-items: center;
   gap: 8px;
   cursor: pointer;
-  background-color: #fff;
   border: solid 1px gray;
+  background-color: var(--primary-color);
+  font-size: var(--normal-text);
+  color: #fff;
+  transition: scaleX 0.3s ease-in-out;
 }
 
 .statement-bottom div:nth-child(1) button:hover {
+  transform: scale(1.05);
   transition: 0.3s;
-  background-color: #fff;
-  border: solid 1px var(--primary-color);
-  color: var(--primary-color);
+}
+
+.majiup-device-desc div {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .majiup-image {
