--- a/src/components/subscribe/subscribe.css
+++ b/src/components/subscribe/subscribe.css
@@ -1,61 +1,62 @@
 .subscribe {
-    position: relative;
-    width: 100%;
-    margin-top: 2rem;
-    display: flex;
-    place-items: center;
-    gap: 2rem;
-    /* padding: 0 1rem; */
+  position: relative;
+  width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  place-items: center;
+  gap: 2rem;
+  /* padding: 0 1rem; */
 }
 
-.subscribe div:nth-child(1){
-    position: relative;
-    width: fit-content;
+.subscribe div:nth-child(1) {
+  position: relative;
+  width: fit-content;
 }
 .subscribe h1 {
-    line-height: 1.3;
-    font-weight: bold;            
+  line-height: 1.3;
+  font-weight: bold;
 }
 
-.details{
-    display: flex;
-    place-items: center;
-    gap: 1rem;
+.details {
+  display: flex;
+  place-items: center;
+  gap: 1rem;
 }
 
 .details input {
-    border: none;
-    outline: none;
-    border-bottom: solid 1px;
-    color: gray;
-    width: fit-content;
+  outline: none;
+
+  border: none;
+  border-bottom: solid 1px gray;
+  width: 100%;
+  max-width: 600px;
+  padding: 4px;
+  font-size: large;
 }
 
 .details button {
-    cursor: pointer;
-    border: none;
-    background-color: red;
-    color: #fff;
-    border-radius: 4px;
-    padding: 0.5rem 0.8rem;
+  cursor: pointer;
+  border: none;
+  background-color: red;
+  color: #fff;
+  border-radius: 4px;
+  padding: 0.5rem 0.8rem;
 }
 
 /* Medium Size */
-@media screen and ( max-width: 992px) {
-
+@media screen and (max-width: 992px) {
 }
 
 /* Tablet Size */
-@media screen and ( max-width: 768px) {
-
+@media screen and (max-width: 768px) {
 }
 
 /* Small Size */
-@media screen and ( max-width: 576px) {
-    .subscribe {
-        flex-direction: column;
-        place-items: start;
-        /* padding: 0 0.5rem; */
-        /* overflow-y: hidden; */
-    }
+@media screen and (max-width: 576px) {
+  .subscribe {
+    flex-direction: column;
+    place-items: start;
+    /* padding: 0 0.5rem; */
+    /* overflow-y: hidden; */
+  }
 }
