--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -10,6 +10,7 @@
 
 .products h1 {
   text-align: center;
+  font-weight: bold;
   margin: 0;
 }
 
@@ -38,7 +39,7 @@
 
 .products-content div strong {
   font-size: var(--normal-text);
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .products-content div button,
