--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,9 @@
 nav {
   padding: 0.5rem 0;
   position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff;
 }
 .icon {
   place-content: center;
